--- a/assets/css/recommendation.css
+++ b/assets/css/recommendation.css
@@ -1,22 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Helvetica Neue';
-  background-color: #ffffff;
-}
-
-.container {
-  margin: auto;
-  max-width: 1024px;
-  padding: 0px;
-}
-
-button {
-  cursor: pointer;
-  border: none;
-  outline: 0;
-}
-
 /*
 blue color: #3AAFA9;
 */
